[gd_scene load_steps=4 format=2]

[ext_resource path="res://Questionnaires.gd" type="Script" id=1]
[ext_resource path="res://black_background.jpg" type="Texture" id=2]
[ext_resource path="res://button03.png" type="Texture" id=3]

[node name="Questionnaires" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 312.0
margin_top = 37.5
margin_right = -312.0
margin_bottom = -37.5
rect_min_size = Vector2( 400, 525 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
margin_left = 3.0
margin_right = 397.0
margin_bottom = 522.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
margin_left = 35.0
margin_top = 60.0
margin_right = 365.0
margin_bottom = 480.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestionnairesTitle" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_right = 330.0
margin_bottom = 14.0
text = "Questionnaires"
align = 1

[node name="FatigueButton" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_top = 18.0
margin_right = 330.0
margin_bottom = 73.0
rect_min_size = Vector2( 220, 55 )
texture_normal = ExtResource( 3 )
expand = true

[node name="FatigueLabel" type="Label" parent="NinePatchRect/VBoxContainer/FatigueButton"]
anchor_right = 0.9
anchor_bottom = 0.8
margin_right = 40.0
margin_bottom = 14.0
text = "Fatigue"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MotivationButton" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_top = 77.0
margin_right = 330.0
margin_bottom = 132.0
rect_min_size = Vector2( 220, 55 )
texture_normal = ExtResource( 3 )
expand = true

[node name="MotivationLabel" type="Label" parent="NinePatchRect/VBoxContainer/MotivationButton"]
anchor_right = 0.9
anchor_bottom = 0.8
margin_right = 40.0
margin_bottom = 14.0
text = "Motivation"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorkloadButton" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_top = 136.0
margin_right = 330.0
margin_bottom = 191.0
rect_min_size = Vector2( 220, 55 )
texture_normal = ExtResource( 3 )
expand = true

[node name="WorkloadLabel" type="Label" parent="NinePatchRect/VBoxContainer/WorkloadButton"]
anchor_right = 0.9
anchor_bottom = 0.8
margin_right = 40.0
margin_bottom = 14.0
text = "Workload"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StimulantButton" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_top = 195.0
margin_right = 330.0
margin_bottom = 250.0
rect_min_size = Vector2( 220, 55 )
texture_normal = ExtResource( 3 )
expand = true

[node name="StimulantLabel" type="Label" parent="NinePatchRect/VBoxContainer/StimulantButton"]
anchor_right = 0.9
anchor_bottom = 0.8
margin_right = 40.0
margin_bottom = 14.0
text = "Stimulant Consumption"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfidenceButton" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_top = 254.0
margin_right = 330.0
margin_bottom = 309.0
rect_min_size = Vector2( 220, 55 )
texture_normal = ExtResource( 3 )
expand = true

[node name="ConfidenceLabel" type="Label" parent="NinePatchRect/VBoxContainer/ConfidenceButton"]
anchor_right = 0.9
anchor_bottom = 0.8
margin_right = 40.0
margin_bottom = 14.0
text = "Confidence"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StressButton" type="TextureButton" parent="NinePatchRect/VBoxContainer"]
margin_top = 313.0
margin_right = 330.0
margin_bottom = 368.0
rect_min_size = Vector2( 220, 55 )
texture_normal = ExtResource( 3 )
expand = true

[node name="StressLabel" type="Label" parent="NinePatchRect/VBoxContainer/StressButton"]
anchor_right = 0.9
anchor_bottom = 0.8
margin_right = 40.0
margin_bottom = 14.0
text = "Stress"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 372.0
margin_right = 330.0
margin_bottom = 392.0
alignment = 1

[node name="BackButton" type="Button" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 144.0
margin_right = 186.0
margin_bottom = 20.0
text = "Back"
[connection signal="pressed" from="NinePatchRect/VBoxContainer/FatigueButton" to="." method="_on_FatigueButton_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/MotivationButton" to="." method="_on_MotivationButton_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/WorkloadButton" to="." method="_on_WorkloadButton_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/StimulantButton" to="." method="_on_StimulantButton_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/ConfidenceButton" to="." method="_on_ConfidenceButton_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/StressButton" to="." method="_on_StressButton_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
